@@ -446,6 +446,8 @@ All:
 - Added IEC and SI units support to GetHumanReadableSize() (Julien Weinzorn).
 - Add convenient wxString::ToStd{String,Wstring}() helpers.
 - Added wxTranslations class to allow localization without changing locale.
+- Added wxResourceTranslationsLoader for loading translations from Windows
+  resources.
 
 Unix:
 
